--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "sᴇssɪᴏɴ ɢᴇɴᴇʀᴀᴛᴏʀ",
   "description": "A Telegram Bot to generate Telethon and Pyrogram String Session.",
-  "logo": "https://telegra.ph/file/4384143211a0905238ce4.jpg",
+  "logo": "",
   "keywords": [
     "telegram",
     "bot",
@@ -11,7 +11,7 @@
     "buildpacks": [{
     "url": "heroku/python"
   }],
-  "repository": "https://github.com/Tepthon/TepthonSessionbotv2",
+  "repository": "https://github.com/rogerpq/BOT-GEN",
   "env": {
     "ENVIRONMENT": {
       "description": "Don't change ANYTHING.",
