--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 motor==3.1.1
 psutil==5.9.4
 pyromod==1.5
-pyrogram==2.0.100
+pyrogram
 python-dotenv==1.0.0
-telethon==1.27.0
+telethon==1.32.1
 tgcrypto==1.2.5
