--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,4 @@
-mongodb:
+databases:
   - name: baqir
     ipAllowList: []
     region: frankfurt
@@ -20,8 +20,8 @@ services:
         sync: false
       - key: PYTHON_VERSION
         value: 3.10.9
-      - key: MONGO_DB_URI
-        fromMongodb:
+      - key: DATABASE_URL
+        fromDatabase:
           name: baqir
           property: connectionString   
     autoDeploy: false
