--- a/render.yaml
+++ b/render.yaml
@@ -20,6 +20,8 @@ services:
         sync: false
       - key: PYTHON_VERSION
         value: 3.10.9
+      - key: MONGO_DB_URI
+        sync: false
       - key: DATABASE_URL
         fromDatabase:
           name: baqir
